fixed some FindBugs problems
git-svn-id: https://dev.geogebra.org/svn/trunk/geogebra@12459 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e